--- a/static/css/index.css
+++ b/static/css/index.css
@@ -6,6 +6,9 @@
 li {
   list-style: none;
 }
+a {
+  text-decoration: none;
+}
 body {
   background: url(../image/bg.jpg) no-repeat top center;
   line-height: 1.15;
@@ -81,6 +84,9 @@ header span {
   text-align: center;
   color: #fff;
   font-size: 0.25rem;
+}
+.main-box .panel .content h2 a {
+  color: #fff;
 }
 .main-box .panel .content .chart {
   height: 3rem;
@@ -241,4 +247,22 @@ header span {
   to {
     transform: translate(-50%, -50%) rotate(-360deg);
   }
+}
+.div-tip-warp {
+  background-color: #266C7C;
+}
+.tip-background {
+  padding: 2px 8px;
+  background-color: #266C7C;
+  border-radius: 3px;
+}
+.triangle-down {
+  width: 0;
+  height: 0;
+  border-left: 7px solid transparent;
+  border-right: 7px solid transparent;
+  border-top: 7px solid #266C7C;
+}
+.triangle-position {
+  margin-left: 35px;
 }
